//! This module must be kept in sync with options.proto.

pub(super) const OBJECT_DIRECTIVES: u32 = 58301;
pub(super) const INPUT_OBJECT_DIRECTIVES: u32 = 58302;
pub(super) const OUTPUT_FIELD_DIRECTIVES: u32 = 58301;
pub(super) const INPUT_FIELD_DIRECTIVES: u32 = 58302;
pub(super) const DERIVE_FIELD: u32 = 58304;
pub(super) const KEY: u32 = 58305;
pub(super) const JOIN_FIELD: u32 = 58306;
pub(super) const ENUM_DIRECTIVES: u32 = 58301;
pub(super) const ENUM_VALUE_DIRECTIVES: u32 = 58301;

pub(super) const DEFAULT_TO_QUERY_FIELDS: u32 = 58301;
pub(super) const DEFAULT_TO_MUTATION_FIELDS: u32 = 58302;
pub(super) const SUBGRAPH_NAME: u32 = 58303;
pub(super) const SCHEMA_DIRECTIVES: u32 = 58304;

pub(super) const DIRECTIVES: u32 = 58301;
pub(super) const IS_QUERY: u32 = 58302;
pub(super) const IS_MUTATION: u32 = 58303;
pub(super) const ARGUMENT_DIRECTIVES: u32 = 58304;
pub(super) const LOOKUP: u32 = 58305;
pub(super) const ARGUMENT_IS: u32 = 58306;
